[tool.poetry]
name = "pyhpalm"
version = "0.1.0"
description = "Python code to read data from HP ALM system via REST APIs"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
Flask-HTTPBasicAuth = "^1.0.1"
flask = "^3.0.0"

[tool.poetry.group.dev.dependencies]
Flask-HTTPBasicAuth = "^1.0.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
